# RAUM

./: .gitignore  Cargo.toml  README.md
docs/: hopfield_math.tex
docs/chip-firing/: chip-firing_math.tex
docs/hopfield/: hopfield_math.tex
src/: lib.rs  main.rs
src/graphics/: mod.rs  pipeline.rs  renderer.rs
src/neural/: chip_firing.rs  hopfield.rs  mod.rs
src/ui/: app.rs  mod.rs
src/ui/widgets/: grid.rs
src/ui/windows/: chip_firing.rs  hopfield.rs  mod.rs
